# dillrex-lang

./: .gitattributes  .gitignore  DILLREX_LANGUAGE.md  DILLREX_TERMINAL.cmd  DILLREX_TERMINAL.sh  README.md  RUN_DILLREX_EXAMPLE.cmd  RUN_DILLREX_EXAMPLE.sh  START_DILLREX_TERMINAL.cmd  START_DILLREX_TERMINAL.sh  START_DILLREX_TERMINAL.vbs  VERIFY_BOOTSTRAP.cmd  VERIFY_BOOTSTRAP.sh  VERIFY_SELFHOST2.cmd  VERIFY_SELFHOST2.sh  hello.dillrex  launch_dillrex_terminal.ps1  pyproject.toml
bootstrap/: README.md  compiler-tools.drx  dillrex-self.drx  dillrexc.drx  lexer.drx  parser.drx  runner.drx
dillrex/: __init__.py  cli.py  runtime.py  terminal_app.py
examples/: hello.drx  math.drx  no_input.drx  print_input.drx  text_numbers.drx  upperfile.drx  variables.dillrex  variables.drx
examples/project-example/: dillrex.json  main.dillrex  main.drx
tests/: test_bootstrap.py  test_dillrex.py
