[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dillrex-lang"
version = "0.3.0"
description = "The Dillrex programming language runtime and bootstrap tools."
readme = "DILLREX_LANGUAGE.md"
requires-python = ">=3.10"
authors = [
  { name = "Dillrex" }
]

[project.scripts]
dillrex = "dillrex.cli:main"
